@@ -1,4 +1,5 @@
 6.0.3
+- Bugfix: Removed the last deprecation in the unit tests.
 
 6.0.2
 - Added support for the \GdImage analysis.
